refactor: upgrade AWS Java SDK to V2
TIS21-7808